more bugfixing and spacing

--- a/static/mal.css
+++ b/static/mal.css
@@ -7,8 +7,8 @@ h2 {
   color: #fef7f2;
   background-color: #2b1b12;
   padding: 0.5rem;
-  padding-right: 1.25rem;
-  padding-left: 1.25rem;
+  padding-right: 1.75rem;
+  padding-left: 1.75rem;
   border-radius: 0.5rem;
   border: #2b1b12;
   cursor: pointer;
@@ -19,6 +19,7 @@ h2 {
   color: #2b1b12;
   transition: all 0.3s ease-in-out;
 }
+
 .arrow-icon {
   cursor: pointer;
 }
@@ -26,4 +27,7 @@ h2 {
   transform: scale(1.2);
   transition: all 0.3s ease-in-out;
   cursor: pointer;
+}
+.check-items {
+  align-items: center;
 }
