--- a/static/style.css
+++ b/static/style.css
@@ -11,5 +11,5 @@
   --residences-color: #ddc7bb;
   --background-color: #fef7f2;
   --button-color: #2b1b12;
-  --third-color: #2b1b1257;
+  --third-color: #543e32;
 }
